--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
                     <a href="mailto:name@email.com">yeralkhanslam@gmail.com</a>
                 </div>
                 <p class="lead mb-5">I am experienced Front-end Developer and UI designer. Currently open to new projects.</p>
-                <div class="social-icons">
+<!--                 <div class="social-icons">
                     <a class="social-icon" href="#"><i class="fab fa-linkedin"></i></a>
                     <a class="social-icon" href="#"><i class="fab fa-github"></i></a>
                     <a class="social-icon" href="#"><i class="fab fa-twitter"></i></a>
                     <a class="social-icon" href="#"><i class="fas fa-facebook"></i></a>
-                </div>
+                </div> -->
             </div>
         </section>
         <hr class="m-0" />
